removed begin button url for demos

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,8 @@
             itaque, deserunt id, ipsum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis
             atque assumenda accusamus quasi aliquid incidunt. Nemo culpa veritatis eveniet molestias accusamus
             reiciendis ducimus at quod reprehenderit, animi odio quae!</div>
-        <a href="./pages/instructions.html" class="instructions-intro__button">Begin</a>
+        <a class="instructions-intro__button">Begin</a>
+        <!-- href="./pages/instructions.html" -->
     </div>
 
     <div class="gallery">
